tests/NormalTests/paczka1/fuzzy1/27919050.err
Error in line 17: YSbzT A930 95,6
Error in line 11: mN56eH A930 56,0
Error in line 22: mN56eH A486 91,9
Error in line 28: 2z9GGNC S963 10,5
Error in line 36: mN56eH A486 -6,9
Error in line 35: mN56eH A486 85,2
